syntax = "proto3";
package gitopia.gitopia.rewards;

import "gogoproto/gogo.proto";
import "rewards/params.proto";
import "rewards/rewards.proto";

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/gitopia/gitopia/v4/x/rewards/types";

// GenesisState defines the rewards module's genesis state.
message GenesisState {
  repeated Reward rewardsList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
  Params params = 1 [(gogoproto.nullable) = false];
}
 